--- a/src/pages/testing/vehicle/vehicle-history/vehicle-history.html
+++ b/src/pages/testing/vehicle/vehicle-history/vehicle-history.html
@@ -22,7 +22,7 @@
             <ion-grid>
               <ion-row padding-left>
                 <ion-col col-8>
-                  <p text-wrap>{{ testType.testTypeName }}</p>
+                  <p text-wrap>{{ testType.name }}</p>
                 </ion-col>
                 <ion-col col-4 text-right>
                   <p text-uppercase
