--- a/src/pages/testing/test-creation/test-types-list/test-types-list.html
+++ b/src/pages/testing/test-creation/test-types-list/test-types-list.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>
       <span *ngIf="firstPage">Test type</span>
-      <span *ngIf="!firstPage">{{ previousPage.charAt(0).toUpperCase() + previousPage.slice(1, previousPage.length) }}</span>
+      <span *ngIf="!firstPage">{{ previousPage }}</span>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -19,7 +19,7 @@
                 class="list-item-height"
                 *ngFor="let testType of testTypeReferenceData | filterTestTypeByVehicle: vehicleData"
                 (click)="selectedItem(testType)">
-        <h3>{{ testType.testTypeName || testType.name.charAt(0).toUpperCase() + testType.name.slice(1, testType.name.length) }}</h3>
+        <h3>{{ testType.name }}</h3>
         <ion-icon item-end *ngIf="testType.nextTestTypesOrCategories" name="arrow-forward"></ion-icon>
       </ion-item>
     </ion-item-group>
