--- a/src/pages/testing/test-creation/test-review/test-review.html
+++ b/src/pages/testing/test-creation/test-review/test-review.html
@@ -1,29 +1,22 @@
 <ion-header>
-  <ion-navbar hideBackButton="true">
+  <ion-navbar>
     <ion-title margin-left>
       Test review
     </ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="navCtrl.pop()" padding-horizontal>
-        <ion-icon name="arrow-back" padding-right></ion-icon>
-        <span>Test</span>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
-
 
 <ion-content padding>
   <ng-container *ngFor="let vehicle of latestTest.vehicles" no-padding>
     <ion-card>
-      <ion-item class="ion-item-title">
+      <ion-item padding-vertical class="ion-item-title">
         <ion-img item-start class="vehicle-type-icon"
-                 src="./assets/imgs/{{getVehicleTypeIconToShow(vehicle)}}-icon.svg" width="50"></ion-img>
+                 src="./assets/imgs/{{getVehicleTypeIconToShow(vehicle)}}-icon.svg" width="65" height="27"></ion-img>
         <h2 padding-left>{{ vehicle.vrm }} ({{vehicle.techRecord.vehicleType}})</h2>
         <p padding-left>{{ vehicle.vin }}</p>
       </ion-item>
-      <ion-item padding-left
-                class="bottom-divider">
+      <ion-item padding-horizontal
+                class="bottom-divider height-60">
         <h3 class="odometer-reading">Odometer reading</h3>
         <h3 item-end
             class="odometer-reading-status">
@@ -32,13 +25,13 @@
       </ion-item>
     </ion-card>
 
-    <div class="section-divider"></div>
+    <div margin-vertical class="section-divider"></div>
 
     <div *ngFor="let testType of vehicle.testTypes">
       <ion-card no-padding>
-        <ion-item no-padding>
+        <ion-item class="height-60">
           <ion-grid no-padding>
-            <ion-row padding-left>
+            <ion-row padding-horizontal>
               <ion-col col-8>
                 <p text-wrap
                    class="item-text-color">{{ testType.testTypeName }}</p>
@@ -57,7 +50,7 @@
         <ion-item no-padding
                   class="bottom-divider"
                   *ngIf="testType.numberOfSeatbeltsFitted && testType.testResult !== testTypeResults.ABANDONED">
-          <div margin-left class="test-field">
+          <div margin-left class="test-field test-field-no-border-top">
             <h3>Seatbelt installation check</h3>
             <h3 class="test-field-value">{{testType.seatbeltInstallationCheckDate ? appStrings.YES : appStrings.NO}}</h3>
           </div>
@@ -89,12 +82,16 @@
                  [ngClass]="{'border': i !== testType.defects.length - 1}"
                  *ngFor="let defect of testType.defects; let i = index">
               <h3 class="defect-name">
-                {{ defect.deficiencyRef }}
+                <span>
+                    <span>{{ defect.imNumber }}.{{ defect.itemNumber }}</span>
+                    <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
+                    <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
+                </span>
                 <ion-badge text-uppercase no-margin
                            [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
                   {{ defect.deficiencyCategory }}
                 </ion-badge>
-                <ion-badge text-uppercase no-margin color="primary"
+                <ion-badge text-uppercase no-margin color="tertiary"
                            *ngIf="defect.prs">
                   PRS
                 </ion-badge>
@@ -107,7 +104,8 @@
               </h4>
               <h4 text-wrap class="parent-info-color"
                   *ngIf="defect.deficiencyCategory != commonFunctions.capitalizeString(deficiencyCategory.ADVISORY)">
-                <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }}). </span>
+                <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
+                <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
                 {{ defect.deficiencyText }}
               </h4>
               <h4 text-wrap class="parent-info-color"
@@ -121,7 +119,7 @@
         <ion-item padding-left margin-bottom
                   class="bottom-divider"
                   *ngIf="testType.testResult !== testTypeResults.ABANDONED && getTestTypeOptionalFieldsToDisplay(testType, 'notes')">
-          <div margin-top margin-bottom class="notes-section-title">
+          <div margin-top class="notes-section-title">
             Notes
           </div>
           <h3 text-wrap
@@ -131,7 +129,7 @@
         <ion-item padding-left margin-bottom
                   class="bottom-divider"
                   *ngIf="testType.testResult === testTypeResults.ABANDONED">
-          <div margin-top margin-bottom class="notes-section-title">
+          <div margin-top class="notes-section-title">
             Reason(s) for abandoning
           </div>
           <h4 text-wrap class="parent-info-color"
@@ -140,19 +138,18 @@
         <ion-item padding-left margin-bottom
                   class="bottom-divider"
                   *ngIf="testType.testResult === testTypeResults.ABANDONED && testType.additionalCommentsForAbandon.length">
-          <div margin-top margin-bottom class="notes-section-title">
+          <div margin-top class="notes-section-title">
             Notes
           </div>
           <h4 text-wrap class="parent-info-color">{{testType.additionalCommentsForAbandon}}</h4>
         </ion-item>
         <button ion-item
-                padding-left
                 class="bottom-divider change-details-button"
                 *ngIf="testType.testResult !== testTypeResults.ABANDONED"
                 (click)="openTestDetailsPage(vehicle, testType)"><h3>Change details</h3>
         </button>
       </ion-card>
-      <div class="section-divider"></div>
+      <div margin-vertical class="section-divider"></div>
     </div>
 
     <div margin-top class="footer-cta-section">
