--- a/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.html
+++ b/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.html
@@ -7,102 +7,95 @@
 </ion-header>
   
 <ion-content no-padding>
-    <ng-container *ngFor="let vrm of vehicleData.vrms">
-        <div text-uppercase 
-             text-center 
-             class="vehicle-header-vrm-number" 
-             *ngIf="vrm.isPrimary">
-            {{ vrm.vrm }}
-        </div>
-    </ng-container>
-    <ng-container *ngFor="let techRecord of vehicleData.techRecord">
-        <ng-container *ngIf="commonFunc.checkForMatch(techRecord.statusCode, 'current')">
+    <div text-uppercase 
+         text-center 
+         class="vehicle-header-vrm-number">
+        {{ vehicleData.vrm }}
+    </div>
+  
+    <ion-list class="vehicle-list" *ngFor="let axle of vehicleData.techRecord.axles">
+        <ion-list-header padding-left padding-right>AXLE {{ axle.axleNumber }}</ion-list-header>
+        <ion-item margin-left>
+            <ion-label>
+                <h3>Kerb</h3>
+            </ion-label>
+            <div item-content padding-right>
+                <p>{{ axle.weights.kerbWeight }}</p>
+            </div>
+        </ion-item>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>Laden</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ axle.weights.ladenWeight }}</p>
+            </div>
+        </ion-item>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>GB</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ axle.weights.gbWeight }}</p>
+            </div>
+        </ion-item>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>Design</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ axle.weights.designWeight }}</p>
+            </div>
+        </ion-item>
+    </ion-list>
 
-                <ion-list class="vehicle-list" *ngFor="let axle of techRecord.axles">
-                    <ion-list-header padding-left padding-right>AXLE {{ axle.axleNumber }}</ion-list-header>
-                    <ion-item margin-left>
-                        <ion-label>
-                            <h3>Kerb</h3>
-                        </ion-label>
-                        <div item-content padding-right>
-                            <p>{{ axle.weights.kerbWeight }}</p>
-                        </div>
-                    </ion-item>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>Laden</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ axle.weights.ladenWeight }}</p>
-                        </div>
-                    </ion-item>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>GB</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ axle.weights.gbWeight }}</p>
-                        </div>
-                    </ion-item>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>Design</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ axle.weights.designWeight }}</p>
-                        </div>
-                    </ion-item>
-                </ion-list>
+    <ion-list class="vehicle-list">
+        <ion-list-header padding-left padding-right>GROSS</ion-list-header>
+        <ion-item margin-left>
+            <ion-label>
+                <h3>Kerb</h3>
+            </ion-label>
+            <div item-content padding-right>
+                <p>{{ vehicleData.techRecord.grossKerbWeight }}</p>
+            </div>
+        </ion-item>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>Laden</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ vehicleData.techRecord.grossLadenWeight }}</p>
+            </div>
+        </ion-item>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>GB</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ vehicleData.techRecord.grossGbWeight }}</p>
+            </div>
+        </ion-item>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>Design</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ vehicleData.techRecord.grossDesignWeight }}</p>
+            </div>
+        </ion-item>
+    </ion-list>
+            
+    <ion-list margin-bottom class="vehicle-list">
+        <ion-list-header padding-left padding-right>UNLADEN</ion-list-header>
+        <ion-item margin-left padding-right>
+            <ion-label>
+                <h3>Kerb</h3>
+            </ion-label>
+            <div item-content>
+                <p>{{ vehicleData.techRecord.unladenWeight }}</p>
+            </div>
+        </ion-item>
+    </ion-list>
 
-                <ion-list class="vehicle-list">
-                    <ion-list-header padding-left padding-right>GROSS</ion-list-header>
-                    <ion-item margin-left>
-                        <ion-label>
-                            <h3>Kerb</h3>
-                        </ion-label>
-                        <div item-content padding-right>
-                            <p>{{ techRecord.grossKerbWeight }}</p>
-                        </div>
-                    </ion-item>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>Laden</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ techRecord.grossLadenWeight }}</p>
-                        </div>
-                    </ion-item>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>GB</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ techRecord.grossGbWeight }}</p>
-                        </div>
-                    </ion-item>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>Design</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ techRecord.grossDesignWeight }}</p>
-                        </div>
-                    </ion-item>
-                </ion-list>
-                       
-                <ion-list margin-bottom class="vehicle-list">
-                    <ion-list-header padding-left padding-right>UNLADEN</ion-list-header>
-                    <ion-item margin-left padding-right>
-                        <ion-label>
-                            <h3>Kerb</h3>
-                        </ion-label>
-                        <div item-content>
-                            <p>{{ techRecord.unladenWeight }}</p>
-                        </div>
-                    </ion-item>
-                </ion-list>
-
-        </ng-container>
-    </ng-container>
 </ion-content>
   
